# regime-retraite

./: .gitignore  README.md  pyproject.toml  script_backup.php  taches.txt
.github/workflows/: main_trans-docs.yml
UPLOAD_DIRECTORY/bssoufo_gmail.com-46938e96-660d-4490-af9a-7b17cee1a002/: identification_client.txt
app/: main.py  utils.py
cert/: RegimeRetraite.cer  RegimeRetraite.pfx  cert.pem  key.pem
email_templates/: system_error_support.html  upload_failure_support.html  upload_success_regime.html  upload_success_user.html
plugin-wordpress/backup/sharepoint-connect/: sharepoint-connect.php
plugin-wordpress/sharepoint-connect/: sharepoint-connect.php
plugin-wordpress/sharepoint-connect/assets/css/: admin.css
sharepoint_connector/: auth.py  config.py  main.py  sharepoint_uploader.py  sharepoint_utils.py
tests/: test_sharepoint_utils.py
uploaded_files/: documentation salmo nature.docx
uploaded_files/raba@gmail.com-9bae5fe0-4c77-4d47-ac79-fb7f5baa32e3/: identification_client.txt
